--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -10,7 +10,7 @@
   }
   
   html, body {
-    font-family: "Tenor Sans", sans-serif;
+    font-family: "IBM Plex Sans", sans-serif;
     font-weight: 400;
     font-style: normal;
   }
