feat(tailwind): adiciona imagens de modelos para hero mobile e atualiza fonte

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -10,7 +10,8 @@
   }
   
   html, body {
-    font-family: "IBM Plex Sans", sans-serif;
+    color: #212222;
+    font-family: "IBM Plex Mono", monospace;
     font-weight: 400;
     font-style: normal;
   }
